libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/fn-generics-duplicates.jsonc
//@ run: fail
//@ description: duplicate generics should fail to compile
[
  "::kernel::special_form::fn",
  { "#tuple": ["T", "T"] },
  //~^ ERROR duplicate generic parameter `T`
  { "#struct": {} },
  "_",
  { "#literal": 0 }
]
